feat(security): add production security hardening
Security improvements:
- Add configurable CORS with ALLOWED_ORIGINS whitelist
- Add security headers (X-Frame-Options, X-XSS-Protection,
  X-Content-Type-Options, Referrer-Policy, HSTS)
- Add Secure cookie flag for HTTPS (SECURE_COOKIES env)
- Add X-Forwarded-For validation with TRUST_PROXY setting
- Mask internal error details in production mode
- Add SESSION_SECRET warning for production

New environment variables:
- PRODUCTION: Enable production security hardening
- SECURE_COOKIES: Use Secure flag on cookies (HTTPS)
- ALLOWED_ORIGINS: CORS whitelist (comma-separated)
- TRUST_PROXY: Trust X-Forwarded-For header

Existing security features verified:
- BCrypt password hashing (cost=12)
- Rate limiting (5 attempts → 15 min lockout)
- Secure session signing (HMAC-SHA256)
- Parameterized SQL queries (Exposed ORM)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,25 @@ services:
       # Admin panel port
       SERVER_PORT: "8080"
       
-      # Session secret (generate with: openssl rand -base64 32)
+      # ============================================
+      # Security Settings
+      # ============================================
+      # IMPORTANT: Generate a secret for production!
+      # Run: openssl rand -base64 32
       SESSION_SECRET: "${SESSION_SECRET:-}"
+      
+      # Production mode (enables security hardening)
+      PRODUCTION: "true"
+      
+      # Use secure cookies (set to true if using HTTPS)
+      SECURE_COOKIES: "${SECURE_COOKIES:-false}"
+      
+      # Allowed CORS origins (comma-separated, e.g., "https://admin.example.com")
+      # Leave empty to allow only same-origin requests
+      ALLOWED_ORIGINS: "${ALLOWED_ORIGINS:-}"
+      
+      # Trust X-Forwarded-For header (set to true if behind a reverse proxy)
+      TRUST_PROXY: "${TRUST_PROXY:-true}"
       
       # Enable NAT for client internet access
       ENABLE_NAT: "true"
